--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^18.0.10",
     "chart.js": "^4.2.0",
     "react": "^18.2.0",
+    "axios": "^1.2.3",
+    "sweetalert2": "^11.7.1",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-datalist-input": "^3.2.1",
@@ -45,9 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "axios": "^1.2.3",
-    "sweetalert2": "^11.7.1"
   }
 }
